# bike-baik-espidf

./: .gitignore  CMakeLists.txt  sdkconfig
components/digital_input/: CMakeLists.txt  digital_input.c
components/digital_input/include/: digital_input.h
components/driver/: CMakeLists.txt
components/driver/include/: prox_sensor.h  sim808.h
components/driver/src/: max6675.c  sim808.c
components/drivers/: CMakeLists.txt
components/drivers/src/: max6675.c  prox_sensor.c  wifi_manager.c
components/kalman_filter/: CMakeLists.txt  kalman_filter.c
components/kalman_filter/include/: kalman_filter.h
components/max6675/: CMakeLists.txt  max6675.c
components/max6675/include/: max6675.h
components/mpu6050/: CMakeLists.txt  madgwick.c  mahony.c  moving_average.c  mpu6050.c
components/mpu6050/include/: moving_average.h  mpu6050.h  orientation.h
components/prox_sensor/: CMakeLists.txt  prox_sensor.c
components/prox_sensor/include/: prox_sensor.h
components/sim808/: CMakeLists.txt  sim808.c  sim808_http.c  sim808_mqtt.c
components/sim808/include/: sim808.h
components/utils/: CMakeLists.txt
components/utils/include/: ekf.h  mahony.h
components/utils/src/: ekf.c  mahony.c
components/vehicle_performance/: CMakeLists.txt  vehicle_performance.c
components/voltage_sensor/: CMakeLists.txt  voltage_sensor.c
main/: CMakeLists.txt
main/include/: alert_manager.h  config.h  sensor_manager.h  sensor_tasks.h  trip_manager.h
main/src/: alert_manager.c  main.c  sensor_manager.c  sensor_tasks.c  trip_manager.c
(+2 files in other folders)
