idf_component_register(
    SRCS
        "src/mpu6050.c"
        "src/max6675.c"
        "src/wifi_manager.c"
        "src/prox_sensor.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        driver       
        esp_driver_spi 
        esp_driver_gpio
        esp_event
        esp_wifi
        esp_timer
        nvs_flash
)
